cmake_minimum_required(VERSION 3.15)
project(untitled)
set(CMAKE_CXX_STANDARD 14)
add_subdirectory(libfdr)
include_directories(${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/libfdr)
include_directories(MyIgraph/include)
file(GLOB SOURCE "MyIgraph/src/*.c")
add_executable(untitled ${SOURCE} MyIgraph/main.c)
target_link_libraries(untitled fdr)